hphp/hack/test/typecheck/aktuple/unify_ok.php.like_types.exp
File "unify_ok.php", line 11, characters 22-26:
Invalid argument (Typing[4110])
File "unify_ok.php", line 3, characters 19-21:
Expected num
File "unify_ok.php", line 11, characters 22-26:
But got string
